--- a/Shop/webapp/resources/css/style.css
+++ b/Shop/webapp/resources/css/style.css
@@ -38,3 +38,15 @@
 .top-alignment {
 	vertical-align: top;
 }
+
+.button {
+	background-color: #00a6dd; /* Green */
+	border: none;
+	color: white;
+	padding: 0px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 5%;
+}
