--- a/Shop/webapp/resources/css/style.css
+++ b/Shop/webapp/resources/css/style.css
@@ -19,7 +19,8 @@
 }
 
 .ui-widget, .ui-widget .ui-widget, .ui-wizard-step-title {
-	font-size: 12px;
+	font-size: 15px;
+	font-family: TelefonicaHeadLine-Light;
 }
 
 .top td {
@@ -40,13 +41,21 @@
 }
 
 .button {
-	background-color: #00a6dd; /* Green */
+	background-color: #00a6dd;
 	border: none;
 	color: white;
-	padding: 0px 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
-	border-radius: 5%;
+	font-size: 15px;
+	width: 100%;
+}
+
+.one-third {
+	width: 33%;
+	vertical-align: middle !important;
+}
+
+.ui-panelgrid .ui-panelgrid-cell {
+	border-width: 1px;
 }
