--- a/Shop/webapp/resources/css/style.css
+++ b/Shop/webapp/resources/css/style.css
@@ -23,6 +23,10 @@
 	font-family: TelefonicaHeadLine-Light;
 }
 
+.ui-widget-content, .ui-panel .ui-panel-titlebar {
+	border-radius: 15px 35px;
+}
+
 .top td {
 	vertical-align: top;
 }
@@ -49,6 +53,7 @@
 	display: inline-block;
 	font-size: 15px;
 	width: 100%;
+	border-radius: 15px 35px;
 }
 
 .one-third {
